// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rooms API /api/rooms GET should return all rooms 1`] = `
Array [
  Object {
    "createdAt": 1514764800000,
    "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
    "description": "this is a test",
    "name": "room_1",
    "roomId": "0fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
    "updatedAt": 1514851200000,
  },
  Object {
    "createdAt": 1514764800000,
    "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
    "description": "this is a second test",
    "name": "room_2",
    "roomId": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
    "updatedAt": 1514851200000,
  },
  Object {
    "createdAt": 1514764800000,
    "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
    "description": "this is a second test",
    "name": "room_3",
    "roomId": "d10c80e8-49e4-4d6b-b966-4fc9fb98879f",
    "updatedAt": 1514851200000,
  },
]
`;

exports[`Rooms API /api/rooms POST should create a new room 1`] = `
Object {
  "createdAt": Any<Number>,
  "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
  "description": "a description",
  "name": "Living Room",
  "roomId": StringMatching /\\[a-fA-F0-9-\\]\\{36\\}/,
  "updatedAt": Any<Number>,
}
`;

exports[`Rooms API /api/rooms/:id GET should return an room 1`] = `
Object {
  "createdAt": 1514764800000,
  "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
  "description": "this is a test",
  "devices": Object {
    "dios": Array [
      Object {
        "dioId": 1,
        "name": "test_1",
        "roomId": "0fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
      },
      Object {
        "dioId": 2,
        "name": "test_2",
        "roomId": "0fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
      },
    ],
    "hueLights": Array [
      Object {
        "id": "1",
        "name": "light_1",
        "roomId": "0fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
        "state": Object {
          "bri": 1,
          "on": true,
          "reachable": true,
        },
        "type": "Dimmable light",
      },
      Object {
        "id": "2",
        "name": "light_2",
        "roomId": "0fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
        "state": Object {
          "bri": 1,
          "on": true,
          "reachable": true,
        },
        "type": "Dimmable light",
      },
    ],
  },
  "name": "room_1",
  "roomId": "0fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
  "sensors": Array [
    Object {
      "id": "10",
      "state": Object {
        "lastupdated": "2020-05-09T19:10:00",
        "temperature": 20,
      },
      "type": "ZLLTemperature",
    },
  ],
  "updatedAt": 1514851200000,
}
`;

exports[`Rooms API /api/rooms/:id PATCH should update an room 1`] = `
Object {
  "createdAt": Any<Number>,
  "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
  "description": "this is a second test",
  "name": "room_updated",
  "roomId": StringMatching /\\[a-fA-F0-9-\\]\\{36\\}/,
  "updatedAt": Any<Number>,
}
`;
